--- a/web/resource/css/styles.css
+++ b/web/resource/css/styles.css
@@ -2,9 +2,11 @@ body {
     margin: 0;
     padding: 0;
     background-color: antiquewhite;
+    font-family: Arial, "Comic Sans MS", "Times New Roman", monospace;
 }
 
 #headerPage{
+    padding: 5px;
     column-count: 2;
     background-color: darkcyan;
     height: 40px;
@@ -30,18 +32,56 @@ body {
 }
 
 #headerButtons{
-    float: right;
+    text-align: right;
+
+}
+#headerButtons form{
+    display: inline;
+}
+#headerButtons img{
+    width: 32px;
+    height: 32px;
+    vertical-align: middle;
 }
 
+#headerButtons a{
+    text-decoration: none;
+}
+#emptyShoppingCartMsg{
+    text-align: center;
+    margin: auto;
+}
+
+#shoppingCartLinks{
+    text-align: center;
+}
+
+
 #itemList {
-    width: 500px;
+    width: 80%;
     border: 1px solid black;
+    margin: auto;
+}
+
+
+.rowItemList{
+    border-bottom: gray 1px solid;
+}
+.numberCellItemList{
+    text-align: center;
+}
+.priceCellItemList{
+    text-align: right;
+}
+.actionCellItemList{
+    text-align: center;
 }
 
 .contentPage{
     margin-top: 50px;
-
+    alignment: center;
 }
+
 
 .productsView{
     column-count: 5;
@@ -53,13 +93,28 @@ body {
     display: inline-block;
     width: 300px;
     height: 400px;
-    border: dashed;
+    border: groove;
     padding: 10px;
     margin: 20px;
+    background-color: white;
 }
 .product img{
     width:290px;
     height: 290px;
     clear: right;
+}
+
+#checkoutInformation{
+    column-count: 1;
+}
+.checkoutFieldsetDiv{
+    column-count: 5;
+}
+#checkoutCommands{
+    margin-top: 40px;
+    text-align: center;
+}
+.fieldCheckout label{
+    display: block;
 }
 
